# reactive-graph-experiment

./: Cargo.toml  README.md
.claude/docs/: CLAUDE.md  architecture.md  async-compute.md  builders.md  distributed-vision.md  spec.md
examples/fx_pricing/: Dockerfile  README.md  api.rs  docker-compose.yml  main.rs  nodes.rs  price-feed.sh  seed-trades.sh  types.rs
src/: async_compute.rs  command.rs  engine.rs  engine_handle.rs  error.rs  event_loop.rs  graph.rs  input_tuple.rs  introspection.rs  lib.rs  metrics.rs  node.rs  node_ref.rs  scheduler.rs  sender.rs  subgraph.rs  topology.rs  value_store.rs
src/builder/: async_compute.rs  compute.rs  mod.rs  sink.rs  source.rs  trait_compute.rs  trait_sink.rs  trait_source.rs
