[package]
name = "reactive-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
redis = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "net", "signal"] }

[[example]]
name = "fx_pricing"
path = "examples/fx_pricing/main.rs"
